# project-version

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  justfile
.github/workflows/: ci.yml  docs.yml
src/: changelog.rs  git.rs  lib.rs  main.rs  project.rs
tests/: test_bump_command.rs  test_project.rs  test_set_command.rs  test_toml_edit.rs
