[package]
name = "project-version"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Steele <steele@osteele.com>"]
description = "A cross-language project version bumper for multiple project types"
license = "MIT"
repository = "https://github.com/osteele/project-version"
readme = "README.md"
keywords = ["version", "bump", "semver", "release", "project"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
semver = "1.0"
anyhow = "1.0"
regex = "1.10"
toml = "0.8"
toml_edit = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
colored = "2.0"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"
